[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.24.0"
image = "0.24.6"
rayon = "1.7.0"
num = "0.4.0"
packed_simd = "0.3.8"